[package]
name = "protohackers"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "smoketest"
test = false

[[bin]]
name = "primetime"

[[bin]]
name = "meanstoanend"

[[bin]]
name = "budgetchat"

[[bin]]
name = "unusualdb"

[[bin]]
name = "mob"

[[bin]]
name = "speed"

[[bin]]
name = "reversal"

[[bin]]
name = "insecure"

[[bin]]
name = "jobcentre"

[[bin]]
name = "vcs"


[dependencies]
async-stream = "0.3.5"
clap = { version = "4.3.0", features = ["derive"] }
futures = "0.3.28"
md5 = "0.7.0"
rand = "0.8.5"
regex = "1.9.1"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.28.2", features = ["rt", "macros", "rt-multi-thread", "time", "net", "sync", "io-util", "test-util", "fs"] }
